Fixed sponsor image size on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -22,3 +22,13 @@ footer .copyright { color: #eee; background: #111; padding: 10px; text-align: ce
 .post-list li span { color: #555; font-style: italic; }
 .post-list li p { padding: 0px; margin: 0px; display: inline; }
 .post-readmore-link { font-style: italic; }
+@media (max-width: 1024px) {
+  footer .sponsors img {
+    height: 30px;
+  }
+}
+@media (max-width: 800px) {
+  footer .sponsors img {
+    height: 20px;
+  }
+}
